# googletest_samples

./: CMakeLists.txt  Makefile  README.md
modules/module1/: CMakeLists.txt
modules/module1/src/: main.cpp  module1_to_test1.cpp  module1_to_test1.h
test/module1/: CMakeLists.txt
test/module1/src/: module1_test.cpp
